# rules_esbuild

e2e/path_alias_repro/: MODULE.bazel
e2e/path_alias_repro/app/: BUILD.bazel
e2e/path_alias_repro/lib/: BUILD.bazel
