load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "lib",
    srcs = ["index.ts"],
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = ["//lib"],
    transpiler = "tsc",
)

esbuild(
    name = "bundle",
    entry_point = "index.js",
    srcs = [":lib"],
    deps = ["//lib"],
    bundle = True,
    minify = True,
    tsconfig = "//:tsconfig",
)
